# ahl_hall_model_py

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  reproduce_vignette.py
ahl_hall_model/: __init__.py
ahl_hall_model_py/: __init__.py  model.py
bw_model/: __init__.py
examples/: reproduce_bw_vignette.py
src/: adult_weight.cpp  adult_weight.h  bindings.cpp  energy_build.cpp  shim.hpp
