[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"

[project]
name = "bw_model"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = ["matplotlib>=3.7.5", "numpy>=1.24.4"]

[dependency-groups]
dev = [
    "pre-commit>=3.5.0",
]
